cleaned code for registration tests